--- a/ZazuTizen/css/style.css
+++ b/ZazuTizen/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 #banner-info {
-    padding-left: 10vw;
+    padding-left: 5vw;
 }
 
 #heading {
@@ -41,7 +41,9 @@ body {
 
 #content {
     height: 40vh;
-    margin-top: -48vh;
+    margin-top: -50vh;
+    margin-left: 5vw;
+    margin-right: 5vw: 
 }
 
 .theme-heading {
